--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <li><a data-toggle="tab" href="#ui-3" >system UI 01</a></li>
             <li><a data-toggle="tab" href="#ui-4">system UI 02</a></li>
             <li><a data-toggle="tab" href="#ui-5">system UI 03</a></li>
+            <li><a data-toggle="tab" href="#ui-8">system UI 04</a></li>
             <li><a data-toggle="tab" href="#ui-6">Company Website</a></li>
             <li><a data-toggle="tab" href="#ui-7">Product Animation</a></li>
           </ul>
@@ -133,6 +134,7 @@
             <li><a data-toggle="tab" href="#ui-3">system UI 01</a></li>
             <li><a data-toggle="tab" href="#ui-4">system UI 02</a></li>
             <li><a data-toggle="tab" href="#ui-5">system UI 03</a></li>
+            <li><a data-toggle="tab" href="#ui-8">system UI 04</a></li>
             <li><a data-toggle="tab" href="#ui-6">Company Website</a></li>
             <li><a data-toggle="tab" href="#ui-7">Product Animation</a></li>
           </ul>
@@ -630,8 +632,9 @@
           <div id="ui-1" class="tab-pane fade"><!--=============ui01 start====================-->
               <div class="row text-center" >
                 <h1 style="margin-top:10%;">Licensing Flow</h1>
-                <p>軟體授權流程規劃</p>
+                <p>Plane Software License Flow</p>
                 <p>根據不同的角色，進行流程的規劃。包括客戶、銷售維運人員及公司高層，不同的腳色所接觸的到的流程有所不同</p>
+                <p>According to 
                 <br><p>最後根據流程及需求，整理授權後台功能清單。</p>
               </div>
               <div class="row" >
@@ -653,7 +656,7 @@
               <div class="row text-center" >
                 <h1 style="margin-top:10%;">Web App Mockup</h1>
                 <p>Using Balsamiq</p>
-                <p>製作互動原型，探討流程的合理性</p>
+                <p>Design wireframe mockup to verify the ui flow </p>
                 <div  class="btn btn-default " ><a href="pic/ui/mockup/mockup.pdf" target="_blank" >Download PDF</a></div>
               </div>
               <div class="row" >
@@ -692,9 +695,9 @@
           </div><!--=============ui03 end====================-->
           <div id="ui-4" class="tab-pane fade"><!--=============ui04 start====================-->
               <div class="row text-center" >
-                <h1 style="margin-top:10%;">System UI Design II(專利申請平台)</h1>
+                <h1 style="margin-top:10%;">Patent Apply System</h1>
                  <p class="text-center">Define UI Spec > Flow Design > UI Layout > Icon Design</p>
-                 <br><p class="text-center">UI功能展開、風格定義、icon繪製、操作流程定義及動畫設計</p>
+                 <br><p class="text-center">Define the UI spec、style、UI Flow and draw Icons</p>
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
@@ -734,6 +737,27 @@
                 <div class="col-sm-2"></div>
             </div>
           </div>
+          <div id="ui-8" class="tab-pane fade"><!--=============ui05 start====================-->
+              <div class="row text-center" >
+                <h1 style="margin-top:10%;">System UI Design IV(檔案加密軟體)</h1>
+                 <p class="text-center">Define UI Spec > Flow Design > UI Layout > Icon Design</p>
+                 <br><p class="text-center">UI功能展開、風格定義、icon繪製、操作流程定義</p>
+              </div>
+              <div class="row" >
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+                  <div class="col-sm-12"><img src="pic/ui/v2system/03.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/06.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/07.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/08.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/09.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/05.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/01.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/02.png" class="wow fadeIn  img-responsive"></div>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+          </div>
           <div id="ui-6" class="tab-pane fade"><!--=============ui06 start====================-->
               <div class="row text-center" >
                 <h1 style="margin-top:10%;">Company Website</h1>
@@ -746,7 +770,7 @@
                   <div class="col-sm-12"><img src="pic/ui/web/01.jpg" class="wow fadeIn  img-responsive"></div>
                   <div class="col-sm-12"><img src="pic/ui/web/02.jpg" class="wow fadeIn  img-responsive"></div>
                   <div class="col-sm-12"><img src="pic/ui/web/03.jpg" class="wow fadeIn  img-responsive"></div>
-                  <div class="col-sm-12"><img src="pic/ui/web/04.jpg" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/web/04.jpg" class="wow fadeIn  img-responsive"><p>icons</p></div>
                   <div class="col-sm-12"><img src="pic/ui/web/05.jpg" class="wow fadeIn  img-responsive"></div>
                 </div>
                 <div class="col-sm-2"></div>
