--- a/index.html
+++ b/index.html
@@ -746,10 +746,10 @@
               <div class="row" >
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
-                  <div class="col-sm-12"><img src="pic/ui/v2system/03.png" class="wow fadeIn  img-responsive"></div>
-                  <div class="col-sm-12"><img src="pic/ui/v2system/07.png" class="wow fadeIn  img-responsive"></div>
-                  <div class="col-sm-12"><img src="pic/ui/v2system/08.png" class="wow fadeIn  img-responsive"></div>
-                  <div class="col-sm-12"><img src="pic/ui/v2system/09.png" class="wow fadeIn  img-responsive"></div>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/03.png" class="wow fadeIn  img-responsive"></div><br>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/07.png" class="wow fadeIn  img-responsive"></div><br>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/08.png" class="wow fadeIn  img-responsive"></div><br>
+                  <div class="col-sm-12"><img src="pic/ui/v2system/09.png" class="wow fadeIn  img-responsive"></div><br>
                   <div class="col-sm-12"><img src="pic/ui/v2system/05.png" class="wow fadeIn  img-responsive"></div>
                   <div class="col-sm-12"><img src="pic/ui/v2system/01.png" class="wow fadeIn  img-responsive"></div>
                   <div class="col-sm-12"><img src="pic/ui/v2system/02.png" class="wow fadeIn  img-responsive"></div>
