--- a/index.html
+++ b/index.html
@@ -717,9 +717,9 @@
           </div><!--=============ui04 end====================-->        
           <div id="ui-5" class="tab-pane fade"><!--=============ui05 start====================-->
               <div class="row text-center" >
-                <h1 style="margin-top:10%;">System UI Design III(檔案加密軟體)</h1>
+                <h1 style="margin-top:10%;">Files Management System (Content Management)</h1>
                  <p class="text-center">Define UI Spec > Flow Design > UI Layout > Icon Design</p>
-                 <br><p class="text-center">UI功能展開、風格定義、icon繪製、操作流程定義</p>
+                 <br><p class="text-center">Define the UI spec、style、UI Flow and draw Icons</p>
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
@@ -739,9 +739,9 @@
           </div>
           <div id="ui-8" class="tab-pane fade"><!--=============ui05 start====================-->
               <div class="row text-center" >
-                <h1 style="margin-top:10%;">System UI Design IV(檔案加密軟體)</h1>
+                <h1 style="margin-top:10%;">Files Management System (Client)</h1>
                  <p class="text-center">Define UI Spec > Flow Design > UI Layout > Icon Design</p>
-                 <br><p class="text-center">UI功能展開、風格定義、icon繪製、操作流程定義</p>
+                 <br><p class="text-center">Define the UI spec、style、UI Flow and draw Icons</p>
               </div>
               <div class="row" >
                 <div class="col-sm-2"></div>
